# jax-mpdata

./: .gitignore  create_data.py  jax_mpdata_oop.py  jax_mpdata_procedural.py  mpdata-test.py  pyproject.toml
.github/workflows/: benchmark.yml
benchmarks/: env_manager.py  main.py
benchmarks/data/: gaussian2d_128_1.nc  gaussian2d_128_2.nc  gaussian2d_128_3.nc  gaussian2d_181_1.nc  gaussian2d_181_2.nc  gaussian2d_181_3.nc  gaussian2d_256_1.nc  gaussian2d_256_2.nc  gaussian2d_256_3.nc  gaussian2d_32_1.nc  gaussian2d_32_2.nc  gaussian2d_32_3.nc  gaussian2d_362_1.nc  gaussian2d_362_2.nc  gaussian2d_362_3.nc  gaussian2d_45_1.nc  gaussian2d_45_2.nc  gaussian2d_45_3.nc  gaussian2d_512_1.nc  gaussian2d_512_2.nc  gaussian2d_512_3.nc  gaussian2d_64_1.nc  gaussian2d_64_2.nc  gaussian2d_64_3.nc  gaussian2d_90_1.nc  gaussian2d_90_2.nc  gaussian2d_90_3.nc  gaussian2d_big.nc  gaussian2d_big_mpdata.nc  gaussian2d_big_upwind.nc  gaussian2d_small.nc  gaussian2d_small_mpdata.nc  gaussian2d_small_upwind.nc
benchmarks/models/Arabas_et_al_2014/: benchmark.py  mpdata.py
benchmarks/models/NCAR/: CMakeLists.txt  benchmark.py  pyproject.toml
benchmarks/models/NCAR/src/: mpdata.cpp  mpdata.f  mpdata_wrapper.F90
benchmarks/models/PyMPDATA/: benchmark.py
benchmarks/models/PyMPDATA_4threads/: benchmark.py
benchmarks/models/PyMPDATA_serial/: benchmark.py
benchmarks/models/jax-mpdata/: benchmark.py
benchmarks/models/jax_mpdata_cpu/: benchmark.py
benchmarks/models/jax_mpdata_cpu_16threads/: benchmark.py  config.json
benchmarks/models/jax_mpdata_cpu_4threads/: config.json
benchmarks/models/jax_mpdata_cpu_serial/: benchmark.py  config.json
benchmarks/models/jax_mpdata_gpu/: benchmark.py
benchmarks/models/libmpdata++/: CMakeLists.txt  benchmark.py  pyproject.toml
benchmarks/models/libmpdata++/src/: mpdata.cpp
benchmarks/models/libmpdataxx_4threads/: benchmark.py
benchmarks/models/libmpdataxx_serial/: benchmark.py
benchmarks/models/libmpdataxx_serial/src/: mpdata.cpp
jax_mpdata/: oop.py  procedural.py
thesis/: thesis.ipynb
