[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-mpdata"
version = "0.0.1"
description = "Incoming Bachelor thesis"
requires-python = ">=3.9"
dependencies = [
    "jax",
    "numpy",
    "matplotlib"
]

[tool.setuptools.packages.find]
include = ["jax_mpdata*"]

[project.optional-dependencies]
benchmarks = [
    "xarray",
    "netCDF4",
    "PyMPDATA",
    "tqdm"
]